// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment 1`] = `
<div
  className="bcs-Comment"
>
  <Media
    as="div"
    className="bcs-Comment-media"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <TetherComponent
        attachment="top right"
        className="bcs-Comment-deleteConfirmationModal"
        constraints={
          Array [
            Object {
              "attachment": "together",
              "to": "scrollParent",
            },
          ]
        }
        renderElementTag="div"
        renderElementTo={null}
        targetAttachment="bottom right"
      >
        <MediaMenu
          data-testid="comment-actions-menu"
          dropdownProps={Object {}}
          isDisabled={false}
          menuProps={
            Object {
              "data-resin-component": "activityfeedcomment",
            }
          }
        >
          <MenuItem
            data-resin-target="activityfeed-comment-delete"
            data-testid="delete-comment"
            onClick={[Function]}
          >
            <Trash16 />
            <FormattedMessage
              defaultMessage="Delete"
              id="be.contentSidebar.activityFeed.comment.commentDeleteMenuItem"
            />
          </MenuItem>
        </MediaMenu>
      </TetherComponent>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment when translation is enabled 1`] = `
<div
  className="bcs-Comment"
>
  <Media
    as="div"
    className="bcs-Comment-media"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        onTranslate={[MockFunction]}
        tagged_message="test"
        translationEnabled={true}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render an error when one is defined 1`] = `
<div
  className="bcs-Comment"
>
  <Media
    as="div"
    className="bcs-Comment-media bcs-is-pending"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={true}
      />
    </MediaBody>
  </Media>
  <ActivityError
    message="errorrrrr"
    title="error"
  />
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render commenter as a link 1`] = `
<div
  className="bcs-Comment"
>
  <Media
    as="div"
    className="bcs-Comment-media"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div
        className="bcs-Comment-headline"
      >
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;
